--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "fatin_ca",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "Mass CharacterAI Chat Module",
   "main": "index.js",
   "scripts": {
-    "postinstall": "",
+    "postinstall": "icacls ./bin/init.js /grant Everyone:RX",
     "start": "node index.js",
-    "init": "node init.js"
+    "init": "node ./bin/init.js"
+  },
+  "bin": {
+    "fatin_ca": "./bin/init.js"
   },
   "dependencies": {
     "chalk": "^5.3.0",
